--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,12 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "1.7.2",
+    "jquery": "2.0.3",
     "angular": "1.2.10",
     "angular-route": "1.2.10",
     "underscore": "1.5.2",
-    "slickgrid": "~2.1.0",
-    "jquery.ui": "~1.10.4",
-    "jquery.event.drag-drop": "~2.2.1"
+    "ng-grid": "2.0.8",
+    "bootstrap": "3.0.3",
+    "jquery.ui": "1.10.4"
   }
 }
