--- a/package.json
+++ b/package.json
@@ -18,12 +18,21 @@
   },
   "homepage": "https://github.com/leftstick/SlickGridTrial.git",
   "devDependencies": {
-    "grunt": "0.4.2",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-template": "0.2.2",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-contrib-watch": "0.5.3",
-    "grunt-contrib-connect": "0.6.0",
-    "grunt-contrib-concat": "0.3.0"
+    "gulp-livereload": "~1.1.1",
+    "gulp": "~3.5.2",
+    "gulp-clean": "~0.2.4",
+    "gulp-concat": "~2.1.7",
+    "gulp-template": "~0.1.1",
+    "gulp-rename": "~1.1.0",
+    "gulp-watch": "~0.5.0",
+    "tiny-lr": "0.0.5",
+    "gulp-connect": "~0.9.0",
+    "grunt": "~0.4.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-template": "~0.2.3",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.6.0"
   }
 }
