--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-template": "~0.2.3",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-connect": "~0.6.0"
+    "grunt-contrib-connect": "~0.6.0",
+    "run-sequence": "~0.3.6"
   }
 }
